setup/namespaces.yml
kind: Namespace
apiVersion: v1
metadata:
  name: oppgave1
  labels:
    name: oppgave1
---
