setup/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: halvor-nginx-deployment
  labels:
    app: halvor-nginx
spec:
  replicas: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: halvor-nginx
  template:
    metadata:
      labels:
        app: halvor-nginx
    spec:
      containers:
      - name: halvor-nginx
        image: nginx:1.24.0-alpine
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "150m"
          limits:
            memory: "128Mi"
            cpu: "150m"
