setup/sidecar.yml
apiVersion: v1
kind: Pod
metadata:
  name: ole-anders-sidecar-example
spec:
  volumes:
    - name: log
      emptyDir: {}
  containers:
    - image: busybox
      resources:
        requests:
          memory: "64Mi"
          cpu: "100m"
        limits:
          memory: "128Mi"
          cpu: "100m"
      name: application
      args:
        - /bin/sh
        - -c
        - >
          while true; do
            echo "$(date) INFO hello" >> /var/log/myapp.log ;
            sleep 1;
          done
      volumeMounts:
        - name: log
          mountPath: /var/log
    - name: sidecar
      resources:
        requests:
          memory: "64Mi"
          cpu: "100m"
        limits:
          memory: "128Mi"
          cpu: "100m"
      image: busybox
      args:
        - /bin/sh
        - -c
        - tail -f /var/log/myapp.log
      volumeMounts:
        - name: log
          mountPath: /var/log
