setup/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ole-anders-nginx-service
spec:
  type: NodePort
  selector:
    app: ole-anders-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
